--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("./bailando.jpg") center/cover;
+  background: url("./38132.jpg") center/cover;
+  @apply bg-fixed;
 }
 
 code {
