--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   @apply bg-fixed;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
